k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monadic-pipeline
  labels:
    name: monadic-pipeline
    environment: production
